[package]
name = "investments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
wasm-bindgen = "0.2"
fluent = "0.16.0"
fluent-bundle = "0.15.2"
unic-langid = "0.9"
web-sys = { version = "0.3", features = [] }
